--- a/package.json
+++ b/package.json
@@ -9,5 +9,14 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-graphql": "^0.8.0",
+    "graphql": "^14.3.1",
+    "mongoose": "^5.5.12",
+    "morgan": "^1.9.1",
+    "path": "^0.12.7"
+  }
 }
